EL-2455 - Fixing checkbox alignment in Firefox (#65)
* EL-2455 - Fixing checkbox alignment in Firefox

* EL-2455 - Fixing whitespace issue

--- a/src/components/checkbox/checkbox.component.less
+++ b/src/components/checkbox/checkbox.component.less
@@ -4,6 +4,7 @@
     display: inline-block;
     margin-bottom: 5px;
     white-space: nowrap;
+    line-height: 0;
 }
 
 .ux-checkbox {
@@ -111,7 +112,7 @@ input[type="checkbox"] {
     margin-left: 7px;
     margin-top: 1px;
     white-space: normal;
-    vertical-align: bottom;
+    vertical-align: top;
     height: 24px;
     cursor: default;
     line-height: 22px;
