--- a/src/styles/input-controls.less
+++ b/src/styles/input-controls.less
@@ -5,6 +5,7 @@
 .el-checkbox-label, .el-radiobutton-label, .el-toggleswitch-label,  {
     margin-bottom: 5px;
     white-space: nowrap;
+    line-height: 0;
 
     .el-checkbox, .el-radiobutton {
         font-family: 'hpe-icons';
@@ -163,6 +164,7 @@
         margin-top: 1px;
         white-space: normal;
         vertical-align: top;
+        line-height: 22px;
     }
 }
 
